--- a/module1/Dockerfile
+++ b/module1/Dockerfile
@@ -2,4 +2,5 @@ FROM ubuntu:impish
 RUN apt update && apt-get install -y nginx
 COPY file1 /var/www/html/
 ADD  file2.tar.gz /var/www/html/
+EXPOSE 80
 CMD ["/usr/sbin/nginx", "-g", "daemon off;"]
