--- a/module2/yamls/two-container-pod.yaml
+++ b/module2/yamls/two-container-pod.yaml
@@ -19,5 +19,7 @@ spec:
       volumeMounts:
         - name: shared-data
           mountPath: /pod-data
-      # command: ["/bin/sh"]
-      args: ["echo Hello from the debian container > /pod-data/index.html"]
+      args:
+        [
+          "echo Hello from the debian container > /pod-data/index.html && sleep 600",
+        ]
