--- a/module2/yamls/two-container-pod.yaml
+++ b/module2/yamls/two-container-pod.yaml
@@ -19,7 +19,8 @@ spec:
       volumeMounts:
         - name: shared-data
           mountPath: /pod-data
-      args:
+      # command: ["/bin/sh"]
+      command:
         [
           "echo Hello from the debian container > /pod-data/index.html && sleep 600",
         ]
