--- a/module2/yamls/two-container-pod.yaml
+++ b/module2/yamls/two-container-pod.yaml
@@ -19,6 +19,7 @@ spec:
       volumeMounts:
         - name: shared-data
           mountPath: /pod-data
-      command: ["/bin/sh"]
-      args:
-        ["-c", "echo Hello from the debian container > /pod-data/index.html"]
+      command: ["sleep 600"]
+      # command: ["/bin/sh"]
+      # args:
+      #   ["-c", "echo Hello from the debian container > /pod-data/index.html"]
