--- a/module2/yamls/two-container-pod.yaml
+++ b/module2/yamls/two-container-pod.yaml
@@ -19,7 +19,10 @@ spec:
       volumeMounts:
         - name: shared-data
           mountPath: /pod-data
-      command: ["sleep 600"]
+      command:
+        [
+          "echo Hello from the debian container > /pod-data/index.html && tail -f /pod-data/index.html",
+        ]
       # command: ["/bin/sh"]
       # args:
       #   ["-c", "echo Hello from the debian container > /pod-data/index.html"]
