--- a/module2/yamls/two-container-pod.yaml
+++ b/module2/yamls/two-container-pod.yaml
@@ -20,9 +20,7 @@ spec:
         - name: shared-data
           mountPath: /pod-data
       command:
-        [
-          "echo Hello from the debian container > /pod-data/index.html && tail -f /pod-data/index.html",
-        ]
-      # command: ["/bin/sh"]
-      # args:
-      #   ["-c", "echo Hello from the debian container > /pod-data/index.html"]
+        - /bin/sh
+      args:
+        - -c
+        - echo Hello from the debian container > /pod-data/index.html; sleep 600
