--- a/module2/yamls/two-container-pod.yaml
+++ b/module2/yamls/two-container-pod.yaml
@@ -14,8 +14,8 @@ spec:
       volumeMounts:
         - name: shared-data
           mountPath: /usr/share/nginx/html
-    - name: debian-container
-      image: debian
+    - name: centos-container
+      image: centos:7.9
       volumeMounts:
         - name: shared-data
           mountPath: /pod-data
