--- a/module2/yamls/two-container-pod.yaml
+++ b/module2/yamls/two-container-pod.yaml
@@ -10,12 +10,12 @@ spec:
         path: /data
   containers:
     - name: nginx-container
-      image: nginx
+      image: nginx:1.23-debian-11
       volumeMounts:
         - name: shared-data
           mountPath: /usr/share/nginx/html
     - name: centos-container
-      image: centos:7.9
+      image: centos:7.9.2009
       volumeMounts:
         - name: shared-data
           mountPath: /pod-data
@@ -23,4 +23,4 @@ spec:
         - /bin/sh
       args:
         - -c
-        - echo Hello from the debian container > /pod-data/index.html; sleep 600
+        - echo Hello from the debian container > /pod-data/index.html; sleep 3600
