--- a/module2/yamls/two-container-pod.yaml
+++ b/module2/yamls/two-container-pod.yaml
@@ -10,7 +10,7 @@ spec:
         path: /data
   containers:
     - name: nginx-container
-      image: nginx:1.23-debian-11
+      image: bitnami/nginx:1.23-debian-11
       volumeMounts:
         - name: shared-data
           mountPath: /usr/share/nginx/html
