--- a/module2/yamls/two-container-pod.yaml
+++ b/module2/yamls/two-container-pod.yaml
@@ -10,7 +10,7 @@ spec:
         path: /data
   containers:
     - name: nginx-container
-      image: bitnami/nginx:1.23-debian-11
+      image: bitnami/nginx:1.16-centos-7
       volumeMounts:
         - name: shared-data
           mountPath: /usr/share/nginx/html
@@ -23,4 +23,4 @@ spec:
         - /bin/sh
       args:
         - -c
-        - echo Hello from the debian container > /pod-data/index.html; sleep 3600
+        - echo Hello from the centos container > /pod-data/index.html; sleep 3600
