--- a/module2/yamls/pod/2-init-container.yaml
+++ b/module2/yamls/pod/2-init-container.yaml
@@ -7,9 +7,9 @@ metadata:
     app: busybox
 spec:
   volumes:
-  - name: tmp
+  - name: initor
     hostPath:
-      path: /tmp
+      path: /initor
       type: Directory
   containers:
   - name: app-container
@@ -19,12 +19,12 @@ spec:
   - name: initor-1
     image: busybox:1.28
     volumeMounts:
-    - name: tmp
+    - name: initor
       mountPath: /initor
     command: ['sh', '-c', "until cat /initor/file1; do echo waiting for file1 creation; sleep 2; done"]
   - name: initor-2
     image: busybox:1.28
     volumeMounts:
-    - name: tmp
+    - name: initor
       mountPath: /initor
     command: ['sh', '-c', "until cat /initor/file2; do echo waiting for file2 creation; sleep 2; done"]
