--- a/module2/yamls/pod/2-init-container.yaml
+++ b/module2/yamls/pod/2-init-container.yaml
@@ -10,7 +10,7 @@ spec:
   - name: initor
     hostPath:
       path: /initor
-      type: Directory
+      subPathExpr: file
   containers:
   - name: app-container
     image: busybox:1.28
