--- a/module2/yamls/pod/persistentvolume/4.static-provision.yaml
+++ b/module2/yamls/pod/persistentvolume/4.static-provision.yaml
@@ -53,6 +53,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: static-pvc
 spec:
+  storageClassName: manul
   accessModes:
     - ReadWriteOnce
   resources:
