--- a/module2/yamls/pod/persistentvolume/4.static-provision.yaml
+++ b/module2/yamls/pod/persistentvolume/4.static-provision.yaml
@@ -59,6 +59,7 @@ spec:
   storageClassName: manul
   accessModes:
     - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 20Mi
