--- a/module2/yamls/pod/persistentvolume/4.static-provision.yaml
+++ b/module2/yamls/pod/persistentvolume/4.static-provision.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name:  pv1
+  name: pv1
 spec:
-  storageClassName: manul
+  storageClassName: manual
   persistentVolumeReclaimPolicy: Delete
   capacity:
-    storage: 10Mi  #pv的存储空间容量
+    storage: 10Mi #pv的存储空间容量
   accessModes: ["ReadWriteOnce"]
   rbd:
     monitors:
-    - 'rook-ceph-mon-a.rook-ceph:6789'
+      - "rook-ceph-mon-a.rook-ceph:6789"
     pool: kube
     image: foo
     fsType: ext4
@@ -19,16 +19,16 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name:  pv2
+  name: pv2
 spec:
-  storageClassName: manul
+  storageClassName: manual
   persistentVolumeReclaimPolicy: Delete
   capacity:
     storage: 20Mi
   accessModes: ["ReadWriteMany"]
   rbd:
     monitors:
-    - 'rook-ceph-mon-a.rook-ceph:6789'
+      - "rook-ceph-mon-a.rook-ceph:6789"
     pool: kube
     image: foo
     fsType: ext4
@@ -37,15 +37,15 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name:  pv3
+  name: pv3
 spec:
-  storageClassName: manul
+  storageClassName: manual
   capacity:
     storage: 30Mi
   accessModes: ["ReadOnlyMany"]
   rbd:
     monitors:
-    - 'rook-ceph-mon-a.rook-ceph:6789'
+      - "rook-ceph-mon-a.rook-ceph:6789"
     pool: kube
     image: foo
     fsType: ext4
@@ -56,28 +56,28 @@ kind: PersistentVolumeClaim
 metadata:
   name: static-pvc
 spec:
-  storageClassName: manul
+  storageClassName: manual
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 20Mi
 ---
-# apiVersion: v1
-# kind: Pod
-# metadata:
-#   name: static-pv-pod
-# spec:
-#   volumes:
-#     - name: static-pv-storage
-#       persistentVolumeClaim:
-#         claimName: static-pvc
-#   containers:
-#     - name: pv-container
-#       image: nginx
-#       ports:
-#         - containerPort: 80
-#           name: "http-server"
-#       volumeMounts:
-#         - mountPath: "/mnt/static"
-#           name: static-pv-storage
+apiVersion: v1
+kind: Pod
+metadata:
+  name: static-pv-pod
+spec:
+  volumes:
+    - name: static-pv-storage
+      persistentVolumeClaim:
+        claimName: static-pvc
+  containers:
+    - name: pv-container
+      image: nginx
+      ports:
+        - containerPort: 80
+          name: "http-server"
+      volumeMounts:
+        - mountPath: "/mnt/static"
+          name: static-pv-storage
