rs yaml repaire

--- a/module2/yamls/selector/1-replicas-selector.yaml
+++ b/module2/yamls/selector/1-replicas-selector.yaml
@@ -11,7 +11,7 @@ spec:
       app: nginx
   template:
     metadata:
-      lables:
+      labels:
         app: nginx
     spec:
       restartPolicy: Never
