apply rediness probe demo

--- a/module2/yamls/pod/lifecycle/graceful-start/7-rediness-probe.yaml
+++ b/module2/yamls/pod/lifecycle/graceful-start/7-rediness-probe.yaml
@@ -4,7 +4,7 @@ metadata:
   name: readiness-demo
 spec:
   containers:
-    - name: http-probe
+    - name: nginx-demo
       image: nginx
       readinessProbe:
         httpGet:
