--- a/module2/yamls/pod/lifecycle/graceful-start/7-poststart.yaml
+++ b/module2/yamls/pod/lifecycle/graceful-start/7-poststart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: poststart
+  name: poststart-demo
 spec:
   containers:
     - name: lifecycle-demo-container
@@ -9,4 +9,7 @@ spec:
       lifecycle:
         postStart:
           exec:
-            command: ["/bin/sh", "-c", "echo Hello from the postStart handler > /usr/share/message"]
+            command:
+              - "/bin/sh"
+              - "-c"
+              - "echo Hello from the postStart handler > /usr/share/nginx/html/index.html"
