--- a/module2/yamls/pod/schedule/affinity/10-nodeaffinity.yaml
+++ b/module2/yamls/pod/schedule/affinity/10-nodeaffinity.yaml
@@ -12,6 +12,7 @@ spec:
             operator: In
             values:
             - linux
+    nodeAntiAffinity:
       preferredDuringSchedulingIgnoredDuringExecution:
       - weight: 1
         preference:
