--- a/module2/yamls/pod/schedule/affinity/11-podaffinity-target.yaml
+++ b/module2/yamls/pod/schedule/affinity/11-podaffinity-target.yaml
@@ -3,8 +3,8 @@ kind: Pod
 metadata:
   name: pod-affinity-target
   labels:
-    app: mysql
+    app: redis
 spec:
   containers:
-  - name: mysql
-    image: mysql:8.0.29
+  - name: redis
+    image: redis:7.0
