--- a/module2/yamls/pod/schedule/affinity/11-podaffinity.yaml
+++ b/module2/yamls/pod/schedule/affinity/11-podaffinity.yaml
@@ -17,7 +17,7 @@ spec:
               - key: app
                 operator: In
                 values:
-                - mysql
+                - redis
             topologyKey: topology.kubernetes.io/region
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
