--- a/module2/yamls/pod/schedule/affinity/11-podaffinity.yaml
+++ b/module2/yamls/pod/schedule/affinity/11-podaffinity.yaml
@@ -4,6 +4,9 @@ metadata:
   name: pod-affinity-demo
 spec:
   replicas: 2
+  selector:
+    labels:
+      app: pod-affinity-demo
   template:
     metadata:
       labels:
