--- a/module2/yamls/pod/schedule/affinity/11-podaffinity.yaml
+++ b/module2/yamls/pod/schedule/affinity/11-podaffinity.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   replicas: 2
   selector:
-    labels:
+    matchLabels:
       app: pod-affinity-demo
   template:
     metadata:
