--- a/module2/yamls/pod/schedule/affinity/11-podaffinity.yaml
+++ b/module2/yamls/pod/schedule/affinity/11-podaffinity.yaml
@@ -21,7 +21,7 @@ spec:
                 operator: In
                 values:
                 - redis
-            topologyKey: topology.kubernetes.io/region
+            # topologyKey: topology.kubernetes.io/region
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
           - weight: 100
@@ -32,7 +32,7 @@ spec:
                   operator: In
                   values:
                   - pod-affinity-demo
-              topologyKey: topology.kubernetes.io/zone
+              # topologyKey: topology.kubernetes.io/zone
       containers:
       - name: with-pod-affinity
         image: ibmcom/pause:3.0
