--- a/module2/yamls/pod/schedule/affinity/11-podaffinity.yaml
+++ b/module2/yamls/pod/schedule/affinity/11-podaffinity.yaml
@@ -15,13 +15,13 @@ spec:
       affinity:
         podAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions:
-              - key: app
-                operator: In
-                values:
-                - redis
-            topologyKey: topology.kubernetes.io/region
+            - labelSelector:
+                matchExpressions:
+                  - key: app
+                    operator: In
+                    values:
+                      - pod-affinity-demo
+              topologyKey: topology.kubernetes.io/region
         # podAntiAffinity:
         #   preferredDuringSchedulingIgnoredDuringExecution:
         #   - weight: 100
@@ -34,5 +34,5 @@ spec:
         #           - pod-affinity-demo
         #       topologyKey: topology.kubernetes.io/region
       containers:
-      - name: with-pod-affinity
-        image: ibmcom/pause:3.0
+        - name: with-pod-affinity
+          image: ibmcom/pause:3.0
