--- a/module2/yamls/pod/schedule/affinity/11-podaffinity.yaml
+++ b/module2/yamls/pod/schedule/affinity/11-podaffinity.yaml
@@ -20,7 +20,7 @@ spec:
                   - key: app
                     operator: In
                     values:
-                      - pod-affinity-demo
+                      - redis
               topologyKey: topology.kubernetes.io/region
         # podAntiAffinity:
         #   preferredDuringSchedulingIgnoredDuringExecution:
