--- a/module2/yamls/pod/schedule/affinity/11-podaffinity.yaml
+++ b/module2/yamls/pod/schedule/affinity/11-podaffinity.yaml
@@ -21,7 +21,7 @@ spec:
                     operator: In
                     values:
                       - redis
-              topologyKey: topology.kubernetes.io/os
+              topologyKey: kubernetes.io/os
         # podAntiAffinity:
         #   preferredDuringSchedulingIgnoredDuringExecution:
         #   - weight: 100
