--- a/module2/yamls/pod/schedule/affinity/11-podaffinity-target.yaml
+++ b/module2/yamls/pod/schedule/affinity/11-podaffinity-target.yaml
@@ -1,10 +1,27 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: pod-affinity-target
-  labels:
-    app: redis
+  name: redis-cache
 spec:
-  containers:
-  - name: redis
-    image: redis:7.0
+  selector:
+    matchLabels:
+      app: store
+  replicas: 3
+  template:
+    metadata:
+      labels:
+        app: store
+    spec:
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                  - key: app
+                    operator: In
+                    values:
+                      - store
+              topologyKey: "kubernetes.io/hostname"
+      containers:
+        - name: redis-server
+          image: redis:3.2-alpine
