resource request and limit

--- a/samples/wordpress/mariadb-pod.yaml
+++ b/samples/wordpress/mariadb-pod.yaml
@@ -30,3 +30,10 @@ spec:
         - prefix: "MARIADB_"
           configMapRef:
             name: maria-cm
+      resources:
+        limits:
+          memory: 100Mi
+          cpu: 100m
+        requests:
+          memory: 100Mi
+          cpu: 100m
