--- a/samples/worldpress/mariadb-pod.yaml
+++ b/samples/worldpress/mariadb-pod.yaml
@@ -37,3 +37,21 @@ spec:
         requests:
           memory: 100Mi
           cpu: 100m
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: mariadb
+  name: maria-svc
+spec:
+  ports:
+    - name: mysql
+      port: 3306
+      protocol: TCP
+      targetPort: 3306
+  selector:
+    app: wordpress
+    role: database
+  type: ClusterIP
