--- a/samples/worldpress/wp-pod.yaml
+++ b/samples/worldpress/wp-pod.yaml
@@ -5,7 +5,7 @@ metadata:
 
 data:
   # HOST: "172.17.0.5" # maria-pod 的ip地址
-  HOST: "worldpress.maria-svc"
+  HOST: "maria-svc.worldpress"
   USER: "wp"
   PASSWORD: "123"
   NAME: "db"
