--- a/samples/worldpress/wp-pod.yaml
+++ b/samples/worldpress/wp-pod.yaml
@@ -53,7 +53,8 @@ spec:
       port: 80
       protocol: TCP
       targetPort: 80
+      nodePort: 30080
   selector:
     app: wordpress
     role: website
-  type: ClusterIP
+  type: NodePort
