--- a/module1/cgroup-cpu/threads-cpu/Makefile
+++ b/module1/cgroup-cpu/threads-cpu/Makefile
@@ -1,6 +1,7 @@
 all: threads-cpu
 threads-cpu: threads-cpu.c
 	gcc -o threads-cpu threads-cpu.c -lpthread
-
+image: threads-cpu
+	docker build -t threads-cpu .
 clean:
 	rm -f *.o threads-cpu
