--- a/module0/vm1/Vagrantfile
+++ b/module0/vm1/Vagrantfile
@@ -44,7 +44,7 @@ Vagrant.configure("2") do |config|
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
-  config.vm.synced_folder "data", "/vagrant_data"
+  config.vm.synced_folder "../data", "/vagrant_data"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -55,9 +55,9 @@ Vagrant.configure("2") do |config|
     vb.gui = false
   
     # Customize the amount of memory on the VM:
-    vb.memory = "4096"
+    vb.memory = "2048"
     # Customize the amount of CPU on the VM:
-    vb.cpus = 4
+    vb.cpus = 2
   end
   #
   # View the documentation for the provider you are using for more
